# dpv

./: .gitignore  404.html  CG-REPORTS.md  CITATION.cff  CNAME  LICENSE.md  README.md  contributing.md  contributors.json  dpv-gdpr.html  dpv-gdpr.jsonld  dpv-gdpr.n3  dpv-gdpr.rdf  dpv.html  dpv.jsonld  dpv.n3  dpv.rdf  dpv.ttl  dpv.xml  index.html  w3c.json
code/: 100_download_CSV.py  101_convert_owl_manchester.sh  200_serialise_RDF.py  201_convert_owl_manchester.sh  210_convert_owl_manchester.py  290_validate_SHACL.py  295_find_terms_without_example.py  300_generate_HTML.py  310_generate_primer.py  320_generate_guides.py  320_generate_primer.py  330_usecases.py  340_examples.py  370_generate_404.py  380_open_all_html.sh  400_find_terms_without_example.py  801_generate_releases.sh  900_generate_releases.py  900_generate_releases.sh  910_check_purls.py  LICENSE.txt  README.md  changelog.py  check-purl.html  contributors.json  debug.txt  dictionary-aspell-en.pws  pyproject.toml  requirements.txt  spellcheck.sh  style-guide.md  validation.html  vocab_funcs.py  vocab_management.py  vocab_schemas.py
code/aspell/: aspell.conf  en_GB.pws
code/config/: filepaths.py  logger.py  namespaces.py  serialisations.py  term-management.py  version.py
code/jinja2_resources/: macro_dpv_document_family.jinja2  macro_example.jinja2  macro_term_table.jinja2  owl_macro_term_table.jinja2  references.json  template_ai.jinja2  template_de_gdng.jinja2  template_dpv.jinja2  template_dpv_TOM.jinja2  template_dpv_consent.jinja2  template_dpv_context.jinja2  template_dpv_entities.jinja2  (+54 more)
(+18424 files in other folders)
