[project]
name = "dpv"
description = "Data Privacy Vocabulary (DPV)"
version = "2.1.1"
readme = "Readme.md"
dependencies = [
    "aiohttp>=3.12.15",
    "attrs",
    "certifi",
    "cffconvert",
    "chardet",
    "charset-normalizer",
    "click",
    "docopt",
    "html5lib",
    "html5rdf",
    "idna",
    "importlib_metadata",
    "isodate",
    "Jinja2",
    "jsonschema",
    "Markdown",
    "MarkupSafe",
    "owlrl",
    "packaging",
    "prettytable",
    "Pygments",
    "pykwalify",
    "pyparsing",
    "pyrsistent",
    "pyshacl",
    "python-dateutil",
    "python-slugify",
    "rdflib",
    "rdflib-jsonld",
    "requests",
    "ruamel.yaml",
    "ruamel.yaml.clib",
    "setuptools",
    "six",
    "text-unidecode",
    "urllib3",
    "wcwidth",
    "webencodings",
    "xlsx2csv",
    "zipp",
]
